fixed some oversights on mobile responsiveness

--- a/definitions.css
+++ b/definitions.css
@@ -21,6 +21,7 @@ nav {
   display: flex;
   justify-content: space-between;
   margin: 0rem 4rem;
+  font-weight: bold;
 }
 
 a {
@@ -69,7 +70,7 @@ h2 {
 }
 
 p {
-  font-size: 18px;
+  font-size: 15px;
   margin: 0px;
   color: black;
 }
@@ -113,6 +114,10 @@ p {
   }
 
   li {
+    font-size: 13px;
+  }
+
+  p {
     font-size: 13px;
   }
 }
@@ -193,6 +198,10 @@ p {
   }
 
   li {
+    font-size: 12px;
+  }
+
+  p {
     font-size: 12px;
   }
 }
