--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ nav {
   display: flex;
   justify-content: space-between;
   margin: 0rem 4rem;
+  font-weight: bold;
 }
 
 a {
@@ -341,7 +342,7 @@ span {
   html {
     width: 100%;
   }
-  
+
   nav {
     width: 100%;
   }
@@ -380,7 +381,7 @@ span {
 
   .calculate-btn {
     width: 4.5rem;
-    font-size: 10px;
+    font-size: 9px;
     height: 2rem;
   }
 }
